examples/bootstrap/Numberbox.js examples/bootstrap/Numberbox.html

--- a/examples/bootstrap/Numberbox.html
+++ b/examples/bootstrap/Numberbox.html
@@ -60,6 +60,7 @@
     <script type="text/javascript" src="../../Roo/View.js"></script>
 
 <script type="text/javascript" src="../../Roo/bootstrap/dash/NumberBox.js"></script>
+<script type="text/javascript" src="../../Roo/bootstrap/dash/TabBox.js"></script>
 
 <script type="text/javascript" src="../../../../g.raphael/raphael-min.js"></script>
     <script type="text/javascript" src="../../../../g.raphael/g.raphael.0.51.js"></script>
