--- a/examples/bootstrap/homepage.html
+++ b/examples/bootstrap/homepage.html
@@ -59,7 +59,6 @@
     <script type="text/javascript" src="../../Roo/form/VTypes.js"></script>
     <script type="text/javascript" src="../../Roo/View.js"></script>
 
-<script type="text/javascript" src="../../Roo/bootstrap/dash/homepage.js"></script>
 <script type="text/javascript" src="../../Roo/bootstrap/dash/TabBox.js"></script>
 
 <script type="text/javascript" src="../../../../g.raphael/raphael-min.js"></script>
@@ -71,7 +70,7 @@
 
         
     <!-- test code -->
-    <script type="text/javascript" src="Numberbox.js"></script>
+    <script type="text/javascript" src="homepage.js"></script>
   </head>
   
   <body id="body">
