examples/bootstrap/ComboBox2.html

--- a/examples/bootstrap/ComboBox2.html
+++ b/examples/bootstrap/ComboBox2.html
@@ -39,6 +39,7 @@
     
     <script type="text/javascript" src="../../Roo/bootstrap/TriggerField.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/ComboBox.js"></script>
+    <script type="text/javascript" src="../../Roo/bootstrap/ComboBox2.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/Calendar.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/Popover.js"></script>
     
