examples/bootstrap/ComboBox2.html

--- a/examples/bootstrap/ComboBox2.html
+++ b/examples/bootstrap/ComboBox2.html
@@ -66,8 +66,8 @@
   
   <body id="body">
     <script type="text/javascript">
-        var baseURL = '/web.eventmanager/demo.local.php';
-        var rootURL = '/web.eventmanager';
+        var baseURL = '/web.Hydra/index.php';
+        var rootURL = '/web.Hydra';
         Roo.onReady(function() {
             Roo.XComponent.build();
         });
