--- a/examples/bootstrap/ComboBox2.html
+++ b/examples/bootstrap/ComboBox2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
         
-        
+    <link href="../../../bootswatch/AdminLTE-master/css/font-awesome.min.css" rel="stylesheet" type="text/css" /> 
     <link rel="stylesheet" href="../../css-bootstrap/select2.css">        
     <link rel="stylesheet" href="../../css-bootstrap/combobox.css">     
     <link rel="stylesheet" href="../../css-bootstrap/checkbox.css">
