examples/bootstrap/ComboBox2.js examples/bootstrap/ComboBox2.html

--- a/examples/bootstrap/ComboBox2.html
+++ b/examples/bootstrap/ComboBox2.html
@@ -62,7 +62,7 @@
     <script type="text/javascript" src="../../Roo/View.js"></script>
         
     <!-- test code -->
-    <script type="text/javascript" src="ComboBox.js"></script>
+    <script type="text/javascript" src="ComboBox2.js"></script>
   </head>
   
   <body id="body">
