examples/bootstrap/dashboard1.html

--- a/examples/bootstrap/dashboard1.html
+++ b/examples/bootstrap/dashboard1.html
@@ -28,6 +28,9 @@
     <script type="text/javascript" src="../../Roo/bootstrap/CheckBox.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/Radio.js"></script>
     
+    <script type="text/javascript" src="../../Roo/bootstrap/dash/TabBox.js"></script>
+    <script type="text/javascript" src="../../Roo/bootstrap/dash/TabPane.js"></script>
+    
      <script type="text/javascript">
         Dashboard = {};
      </script>
@@ -45,3 +48,4 @@
     </script>
   </body>
 </html>
+<script type="text/javascript" src="../../Roo/bootstrap/dash/TabBox.js"></script>
