--- a/examples/bootstrap/dashboard1.html
+++ b/examples/bootstrap/dashboard1.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="../../Roo/bootstrap/CheckBox.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/Radio.js"></script>
     
+    <script type="text/javascript" src="../../Roo/bootstrap/dash/NumberBox.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/dash/TabBox.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/dash/TabPane.js"></script>
     
