examples/bootstrap/dashboard3.html

--- a/examples/bootstrap/dashboard3.html
+++ b/examples/bootstrap/dashboard3.html
@@ -27,7 +27,10 @@
     <script type="text/javascript" src="../../Roo/bootstrap/Button.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/CheckBox.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/Radio.js"></script>
-    
+      <script type="text/javascript" src="../../Roo/bootstrap/dash/NumberBox.js"></script>
+    <script type="text/javascript" src="../../Roo/bootstrap/dash/TabBox.js"></script>
+    <script type="text/javascript" src="../../Roo/bootstrap/dash/TabPane.js"></script>
+   
      <script type="text/javascript">
         Dashboard = {};
      </script>
