--- a/examples/bootstrap/dashboard3.html
+++ b/examples/bootstrap/dashboard3.html
@@ -27,7 +27,8 @@
     <script type="text/javascript" src="../../Roo/bootstrap/Button.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/CheckBox.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/Radio.js"></script>
-   
+    <script type="text/javascript" src="../../Roo/bootstrap/Table.js"></script>
+
    
      <script type="text/javascript">
         Dashboard = {};
