examples/bootstrap/dashboard3.html

--- a/examples/bootstrap/dashboard3.html
+++ b/examples/bootstrap/dashboard3.html
@@ -33,7 +33,8 @@
     }
     .carousel-control.right
     {
-        right: -30px;
+        right: -30px;background-image
+        background-image : none;
     }
    </style>     
         
