examples/bootstrap/dashboard3.html

--- a/examples/bootstrap/dashboard3.html
+++ b/examples/bootstrap/dashboard3.html
@@ -33,7 +33,7 @@
     }
     .carousel-control.right
     {
-        right: -30px;background-image
+        right: -30px; 
         background-image : none;
     }
    </style>     
