examples/bootstrap/dashboard3.html

--- a/examples/bootstrap/dashboard3.html
+++ b/examples/bootstrap/dashboard3.html
@@ -58,6 +58,7 @@
     <script type="text/javascript" src="Dashboard.Header1.js"></script>
     <script type="text/javascript" src="Dashboard.Sidebar2.js"></script>
     <script type="text/javascript" src="dashboard3.js"></script>
+    <script type="text/javascript" src="dashboard3.slidetest.js"></script>
   </head>
   <body id="body">
     <script type="text/javascript">
