examples/bootstrap/dashboard3.html

--- a/examples/bootstrap/dashboard3.html
+++ b/examples/bootstrap/dashboard3.html
@@ -48,6 +48,8 @@
     <script type="text/javascript" src="../../Roo/bootstrap/CheckBox.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/Radio.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/NavGroup.js"></script>
+    <script type="text/javascript" src="../../Roo/bootstrap/TabGroup.js"></script>
+    <script type="text/javascript" src="../../Roo/bootstrap/TabPanel.js"></script>
 
    
      <script type="text/javascript">
