examples/bootstrap/dashboard3.html

--- a/examples/bootstrap/dashboard3.html
+++ b/examples/bootstrap/dashboard3.html
@@ -41,9 +41,9 @@
     .carousel-inner > .item {
         position: relative;
         display: none;
-        -webkit-transition: 5s ease-in-out left;
-             -o-transition: 5s ease-in-out left;
-                transition: 5s ease-in-out left;
+        -webkit-transition: 5s ease-in-out transform;
+             -o-transition: 5s ease-in-out transform;
+                transition: 5s ease-in-out transform;
       }
     .carousel-inner > .active,
 .carousel-inner > .next,
