--- a/examples/bootstrap/TabPanel-ComboBox.html
+++ b/examples/bootstrap/TabPanel-ComboBox.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="../../Roo/bootstrap/NavGroup.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/NavItem.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/TabGroup.js"></script>
+    <script type="text/javascript" src="../../Roo/bootstrap/TabPanel.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/Row.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/Button.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/ButtonGroup.js"></script>
