examples/bootstrap/TabPanel-ComboBox.html

--- a/examples/bootstrap/TabPanel-ComboBox.html
+++ b/examples/bootstrap/TabPanel-ComboBox.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap ComboBox Example</title>
+    <title>Bootstrap TabPanel - ComboBox Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Bootstrap -->
