examples/bootstrap/TabPanel-ComboBox.html

--- a/examples/bootstrap/TabPanel-ComboBox.html
+++ b/examples/bootstrap/TabPanel-ComboBox.html
@@ -65,7 +65,7 @@
     <script type="text/javascript" src="../../Roo/View.js"></script>
         
     <!-- test code -->
-    <script type="text/javascript" src="ComboBox2.js"></script>
+    <script type="text/javascript" src="TabPanel-ComboBox.js"></script>
   </head>
   
   <body id="body">
