examples/bootstrap/TabPanel-ComboBox.html

--- a/examples/bootstrap/TabPanel-ComboBox.html
+++ b/examples/bootstrap/TabPanel-ComboBox.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="../../Roo/bootstrap/MenuItem.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/MenuSeparator.js"></script>
     
+    <script type="text/javascript" src="../../Roo/bootstrap/NavSimplebar.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/NavGroup.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/NavItem.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/TabGroup.js"></script>
