examples/bootstrap/TabPanel-ComboBox.html

--- a/examples/bootstrap/TabPanel-ComboBox.html
+++ b/examples/bootstrap/TabPanel-ComboBox.html
@@ -37,6 +37,8 @@
     <script type="text/javascript" src="../../Roo/bootstrap/ButtonGroup.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/Img.js"></script>
     
+    <script type="text/javascript" src="../../Roo/bootstrap/Header.js"></script>
+    
     <script type="text/javascript" src="../../Roo/bootstrap/Modal.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/Form.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/Input.js"></script>
