--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -6,7 +6,7 @@
     
     <!-- Bootstrap -->
     <link rel="stylesheet" href="../../css-bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">-->
         
     <link href="../../../bootswatch/AdminLTE-master/css/font-awesome.min.css" rel="stylesheet" type="text/css" /> 
     <link rel="stylesheet" href="../../css-bootstrap/select2.css">        
