--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../css-bootstrap/bootstrap.css">
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">-->
         
-    <link href="../../../bootswatch/AdminLTE-master/css/font-awesome.min.css" rel="stylesheet" type="text/css" /> 
+    <link href="../../../bootswatch/AdminLTE-master/css/font-awesome.css" rel="stylesheet" type="text/css" /> 
     <link rel="stylesheet" href="../../css-bootstrap/select2.css">        
     <link rel="stylesheet" href="../../css-bootstrap/combobox.css">     
     <link rel="stylesheet" href="../../css-bootstrap/checkbox.css">
