--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -66,7 +66,8 @@
     <script type="text/javascript" src="../../Roo/form/VTypes.js"></script>
     <script type="text/javascript" src="../../Roo/View.js"></script>
     
-    <script type="text/javascript" src="../../../Campaign/Editor/Panel.js"></script>
+    <script type="text/javascript" src="../../../Campaign/editor/Panel.js"></script>
+    <script type="text/javascript" src="../../../Campaign/editor/Block.js"></script>
         
     <!-- test code -->
     <script type="text/javascript" src="Editor.js"></script>
