--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -68,6 +68,7 @@
     
     <script type="text/javascript" src="../../../Campaign/editor/Panel.js"></script>
     <script type="text/javascript" src="../../../Campaign/editor/Block.js"></script>
+    <script type="text/javascript" src="../../../Campaign/editor/block/Text.js"></script>
         
     <!-- test code -->
     <script type="text/javascript" src="Editor.js"></script>
