--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -66,7 +66,7 @@
     <script type="text/javascript" src="../../Roo/form/VTypes.js"></script>
     <script type="text/javascript" src="../../Roo/View.js"></script>
     
-    <link rel="stylesheet" href="./../../Campaign/editor/editor.css">
+    <link rel="stylesheet" href="../../../Campaign/editor/editor.css">
     
     <script type="text/javascript" src="../../../Campaign/editor/Panel.js"></script>
     <script type="text/javascript" src="../../../Campaign/editor/Block.js"></script>
