examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -49,6 +49,8 @@
     <script type="text/javascript" src="../../Roo/bootstrap/Calendar.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/Popover.js"></script>
     
+    <script type="text/javascript" src="../../Roo/bootstrap/HtmlEditor.js"></script>
+    
     <script type="text/javascript" src="../../Roo/data/SortTypes.js"></script>
     <script type="text/javascript" src="../../Roo/data/Record.js"></script>
     <script type="text/javascript" src="../../Roo/data/Store.js"></script>
