examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -66,7 +66,7 @@
     <script type="text/javascript" src="../../Roo/form/VTypes.js"></script>
     <script type="text/javascript" src="../../Roo/View.js"></script>
     
-    <script type="text/javascript" src="../../Roo/HtmlCore.js"></script>
+    <script type="text/javascript" src="../../Roo/HtmlEditorCore.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/HtmlEditor.js"></script>
     
     <script type="text/javascript" src="../../../Campaign/editor/Panel.js"></script>
