examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -68,6 +68,7 @@
     
     <script type="text/javascript" src="../../Roo/HtmlEditorCore.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/HtmlEditor.js"></script>
+    <script type="text/javascript" src="../../Roo/bootstrap/TextArea.js"></script>
     
     <script type="text/javascript" src="../../../Campaign/editor/Panel.js"></script>
     <script type="text/javascript" src="../../../Campaign/editor/Block.js"></script>
