--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -74,6 +74,7 @@
     <script type="text/javascript" src="../../Roo/HtmlEditorCore.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/HtmlEditor.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/htmleditor/ToolbarStandard.js"></script>
+    <script type="text/javascript" src="../../Roo/bootstrap/MenuMgr.js"></script>
     
     <!-- test code -->
     <script type="text/javascript" src="Editor.js"></script>
