examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -69,6 +69,8 @@
     <script type="text/javascript" src="../../../Campaign/editor/Panel.js"></script>
     <script type="text/javascript" src="../../../Campaign/editor/TextBlock.js"></script>
     
+    <link rel="stylesheet" href="../../../Campaign/editor/editor.js">
+    
     <script type="text/javascript" src="../../Roo/bootstrap/TextArea.js"></script>
     <script type="text/javascript" src="../../Roo/HtmlEditorCore.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/HtmlEditor.js"></script>
