examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -69,7 +69,7 @@
     <script type="text/javascript" src="../../../Campaign/editor/Panel.js"></script>
     <script type="text/javascript" src="../../../Campaign/editor/TextBlock.js"></script>
     
-    <link rel="stylesheet" href="../../../Campaign/editor/editor.js">
+    <link rel="stylesheet" href="../../../Campaign/editor/editor.css">
     
     <script type="text/javascript" src="../../Roo/bootstrap/TextArea.js"></script>
     <script type="text/javascript" src="../../Roo/HtmlEditorCore.js"></script>
