examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -76,6 +76,7 @@
     <script type="text/javascript" src="../../Roo/bootstrap/HtmlEditor.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/htmleditor/ToolbarStandard.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/MenuMgr.js"></script>
+    <script type="text/javascript" src="../../Roo/bootstrap/MessageBox.js"></script>
     
     <!-- test code -->
     <script type="text/javascript" src="Editor.js"></script>
