examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -87,6 +87,8 @@
         var baseURL = '/web.campaign/index.local.php';
         var rootURL = '/web.campaign';
         
+        Roo.XComponent.hideProgress = true;
+        
         Roo.onReady(function() {
             Roo.XComponent.build();
         });
