examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -92,6 +92,14 @@
         
         Roo.onReady(function() {
             Roo.XComponent.build();
+            Roo.XComponent.on('buildcomplete', function() {
+                try {
+                    var length = Roo.XComponent.modules.length;
+                    Roo.XComponent.modules[length - 1].el.fireEvent('render');
+
+                } catch(e) {}
+
+            });
         });
 
     </script>
