examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -92,9 +92,10 @@
         Roo.XComponent.build();
         Roo.XComponent.on('buildcomplete', function() {
             try {
-                Roo.log('run??????????????????????????????');
-                Roo.log(Roo.XComponent.modules[length - 1]);
+                
                 var length = Roo.XComponent.modules.length;
+                Roo.log('run??????????????????????????????');
+                Roo.log(Roo.XComponent.modules[length - 1].el);
                 Roo.XComponent.modules[length - 1].el.fireEvent('render');
 
             } catch(e) {}
