examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -99,7 +99,7 @@
                 
                 var length = Roo.XComponent.modules.length;
                 Roo.log('run??????????????????????????????');
-                Roo.log(Roo.XComponent.modules[length - 1].el.render);
+                Roo.log(Roo.XComponent.modules[length - 1].el);
                 Roo.XComponent.modules[length - 1].el.fireEvent('render');
 
             } catch(e) {}
