examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -98,7 +98,7 @@
             try {
                 
                 var length = Roo.XComponent.modules.length;
-                Roo.log('run??????????????????????????????');
+                Roo.log('buildcomplete??????????????????????????????');
                 Roo.log(Roo.XComponent.modules[length - 1].el);
                 Roo.XComponent.modules[length - 1].el.fireEvent('render');
 
