examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -103,7 +103,7 @@
                     if(!res.success){
                         return;
                     }
-                    
+                    Roo.log('data !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!');
                     Roo.log(Roo.example.Editor.panel);
                 }
             });
