--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -100,6 +100,7 @@
                 method: 'GET',
                 success : function(res)
                 {
+                    Roo.log(res);
                     if(!res.success){
                         return;
                     }
