examples/bootstrap/Editor.js examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -107,7 +107,7 @@
                     }
                     
                     Roo.log('data !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!');
-                    Roo.log(Roo.example.Editor.panel);
+                    Roo.log(Roo.example.Editor.previewContianer);
                 }
             });
         });
