examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -106,8 +106,7 @@
                         return;
                     }
                     
-                    Roo.log('data !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!');
-                    Roo.log(Roo.example.Editor.previewContianer);
+                    Roo.log(Roo.example.Editor.previewPanel);
                 }
             });
         });
