--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -106,7 +106,8 @@
                         return;
                     }
                     
-                    Roo.log(Roo.example.Editor.previewPanel);
+                    Roo.example.Editor.previewPanel.body().dom.innerHTML = res.data.mailer.htmlbody
+                    Roo.log();
                 }
             });
         });
