examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -93,6 +93,7 @@
         Roo.onReady(function() {
             Roo.XComponent.build();
         });
+        Roo.log('this');
         Roo.log(this);
         Roo.XComponent.on('buildcomplete', function() {
             Roo.Ajax.request({
