examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -112,6 +112,7 @@
                     
                     Roo.each(Roo.example.Editor.previewPanel.body().select('.campaign-editable', true).elements, function(el){
                         Roo.log(el);
+                        Roo.log(el.attr('data-target'));
                     })
                     
                 }
