examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -136,6 +136,7 @@
                         var f = res.data.campaign.emails[p];
                         
                         for (var d in f){
+                            Roo.log(d);
                             Roo.example.Editor[d].setValue(f[d])
                         }
                     }
