examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -140,7 +140,7 @@
                         }
                         
                         for (var d in f['image']){
-                            Roo.example.Editor[d].setValue(f['message'][d])
+                            Roo.example.Editor[d].setValue(f['image'][d])
                         }
                         
                     }
