examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -123,7 +123,7 @@
                         Roo.example.Editor[target] = new Roo.bootstrap.editor.ImageBlock({ panel : 'thanks-email' }).render(el);
                         Roo.example.Editor[target].parent = el;
                         
-                        Roo.example.Editor[target].on('delete', function(){
+                        Roo.example.Editor[target].on('upload', function(){
                             Roo.log('fire delete');
                         })
                         
