examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -124,7 +124,7 @@
                         Roo.example.Editor[target].parent = el;
                         
                         Roo.example.Editor[target].on('upload', function(){
-                            Roo.log('fire delete');
+                            Roo.log('fire upload');
                         })
                         
                     })
