--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -78,6 +78,8 @@
     <script type="text/javascript" src="../../Roo/bootstrap/htmleditor/ToolbarStandard.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/MenuMgr.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/MessageBox.js"></script>
+    
+    <script src="{rootURL}/Campaign/Campaign.Dialog.EmailPreview.js" type="text/javascript"></script>
 
     <!-- test code -->
     <script type="text/javascript" src="Editor.js"></script>
