examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -127,10 +127,9 @@
                         
                         Roo.example.Editor[target].on('upload', function(){
                             Roo.log('fire upload');
-                            Campaign.Dialog.EmailPreview.show(
+                            Campaign.Dialog.Image.show(
                                 {
-                                    id : id,
-                                    method : method
+                                    
                                 }, 
                                 function(){
                                     Roo.MessageBox.alert('Notice', 'Sent');
