examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -87,6 +87,8 @@
   
   <body id="body">
     <script type="text/javascript">
+        Campaign = { Dialog : {} };
+        
         var baseURL = '/web.campaign/index.local.php';
         var rootURL = '/web.campaign';
         
