--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -127,6 +127,7 @@
                         
                         Roo.example.Editor[target].on('upload', function(){
                             Roo.log('fire upload');
+                            Roo.log(Campaign.Dialog);
                             Campaign.Dialog.Image.show(
                                 {
                                     
