examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -130,10 +130,12 @@
                             
                             Campaign.Dialog.Images.show(
                                 {
-                                    
+                                    onid : 237,
+                                    ontable : 'campaign_detail',
+                                    imgtype : target
                                 }, 
-                                function(){
-                                    Roo.MessageBox.alert('Notice', 'Sent');
+                                function(res){
+                                    Roo.log(res);
                                 }
                             );
                         })
