examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -64,7 +64,7 @@
     <script type="text/javascript" src="../../Roo/data/ArrayReader.js"></script>
     
     <script type="text/javascript" src="../../Roo/form/VTypes.js"></script>
-    <script type="text/javascript" src="../../Roo/form/Actions.js"></script>
+    <script type="text/javascript" src="../../Roo/form/Action.js"></script>
     <script type="text/javascript" src="../../Roo/View.js"></script>
     
     <script type="text/javascript" src="../../../Campaign/editor/Panel.js"></script>
