--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -144,8 +144,11 @@
                                         success : function(r)
                                         {
                                             var res = Roo.decode(r.responseText);
-                                            Roo.log('upload completed');
-                                            Roo.log(res);
+                                            
+                                            if(!res.success){
+                                                return;
+                                            }
+                                            Roo.log(this);
 //                                            _this.explainationLogoPreview.el.attr('src', baseURL + '/Images/Thumb/250/' + res.data.id + '/' + res.data.filename);
 //
 //                                            _this.explainationLogoPreview.el.show();
