examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -148,7 +148,10 @@
                                             if(!res.success){
                                                 return;
                                             }
-                                            Roo.log(this);
+                                            
+                                            var width = Roo.example.Editor[target].parent.getWidth();
+                                            
+                                            Roo.example.Editor[target].setValue((baseURL + '/Images/Thumb/' + width + '/' + f['image'][d]));
 //                                            _this.explainationLogoPreview.el.attr('src', baseURL + '/Images/Thumb/250/' + res.data.id + '/' + res.data.filename);
 //
 //                                            _this.explainationLogoPreview.el.show();
