examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -150,7 +150,7 @@
                                             }
                                             
                                             var width = Roo.example.Editor[target].parent.getWidth();
-                                            
+                                            Roo.log(res);return;
                                             Roo.example.Editor[target].setValue((baseURL + '/Images/Thumb/' + width + '/' + f['image'][d]));
 //                                            _this.explainationLogoPreview.el.attr('src', baseURL + '/Images/Thumb/250/' + res.data.id + '/' + res.data.filename);
 //
