examples/bootstrap/Editor.html

--- a/examples/bootstrap/Editor.html
+++ b/examples/bootstrap/Editor.html
@@ -151,7 +151,7 @@
                                             
                                             var width = Roo.example.Editor[target].parent.getWidth();
                                             
-                                            Roo.example.Editor[target].setValue((baseURL + '/Images/Thumb/' + width + '/' + r.data.id));
+                                            Roo.example.Editor[target].setValue((baseURL + '/Images/Thumb/' + width + '/' + res.data.id));
                                         }
                                     });
                                 }
