--- a/examples/bootstrap/dashboard1.html
+++ b/examples/bootstrap/dashboard1.html
@@ -45,6 +45,7 @@
     <script type="text/javascript">
       Roo.onReady(function() {
           Roo.XComponent.build();
+          Roo.bootstrap.Tooltip.init();
       });
     </script>
   </body>
