examples/bootstrap/dashboard1.html

--- a/examples/bootstrap/dashboard1.html
+++ b/examples/bootstrap/dashboard1.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="../../Roo/bootstrap/dash/NumberBox.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/dash/TabBox.js"></script>
     <script type="text/javascript" src="../../Roo/bootstrap/dash/TabPane.js"></script>
+    <script type="text/javascript" src="../../Roo/bootstrap/dash/Tooltip.js"></script>
     
      <script type="text/javascript">
         Dashboard = {};
